--- a/index.html
+++ b/index.html
@@ -1,59 +1,117 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>Socket.IO chat room</title>
     <style>
-      body { background: #333; color: #fff; margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
+      body {
+        background: #333;
+        color: #fff;
+        margin: 0;
+        padding-bottom: 3rem;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          Helvetica, Arial, sans-serif;
+      }
 
-      #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
-      #input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
-      #input:focus { outline: none; }
-      #form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
+      #form {
+        background: rgba(0, 0, 0, 0.15);
+        padding: 0.25rem;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        display: flex;
+        height: 3rem;
+        box-sizing: border-box;
+        backdrop-filter: blur(10px);
+      }
+      #input {
+        border: none;
+        padding: 0 1rem;
+        flex-grow: 1;
+        border-radius: 2rem;
+        margin: 0.25rem;
+      }
+      #username {
+        border: 1px dotted #000;
+        padding: 0 1rem;
+        flex-grow: 0;
+        border-radius: 0.2rem;
+        margin: 0.25rem;
+      }
+      #input:focus {
+        outline: none;
+      }
+      #form > button {
+        background: #333;
+        border: none;
+        padding: 0 1rem;
+        margin: 0.25rem;
+        border-radius: 3px;
+        outline: none;
+        color: #fff;
+      }
 
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages > li { padding: 0.5rem 1rem; }
-      #messages > li:nth-child(odd) { background: #efefef; color: #000;  }
+      #messages {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+      }
+      #messages > li {
+        padding: 0.5rem 1rem;
+      }
+      #messages > li:nth-child(odd) {
+        background: #efefef;
+        color: #000;
+      }
     </style>
   </head>
   <body>
     <ul id="messages"></ul>
     <form id="form" action="">
-      <input id="input" autocomplete="off" /><button>Send</button>
+      <input type="text" id="username" placeholder="username" />
+      <input id="input" autocomplete="off" placeholder="message" /><button>
+        Send
+      </button>
       <button id="disconnectButton">Disconnect</button>
     </form>
-    
+
     <script src="/socket.io/socket.io.js"></script>
-<script>
-  const socket = io();
+    <script>
+      const socket = io();
 
-  const form = document.getElementById('form');
-  const input = document.getElementById('input');
-  const messages = document.getElementById('messages');
-  const disconnectBtn = document.getElementById('disconnectButton')
+      const form = document.getElementById("form");
+      const input = document.getElementById("input");
+      const messages = document.getElementById("messages");
+      const disconnectBtn = document.getElementById("disconnectButton");
+      const usernameInput = document.getElementById("username");
 
-  form.addEventListener('submit', (e) => {
-    e.preventDefault();
-    if (input.value) {
-      socket.emit('chat message', input.value);
-      input.value = '';
-    }
-  })
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        if (input.value) {
+          if (!usernameInput.value) {
+            return alert("Provide a username");
+          }
+          socket.emit("chat message", usernameInput.value, input.value);
+          usernameInput.value = "";
+          input.value = "";
+        }
+      });
 
-  socket.on('chat message', (msg) => {
-    const item = document.createElement('li');
-    item.textContent = msg;
-    messages.appendChild(item);
-    window.scrollTo(0, document.body.scrollHeight);
-  });
+      socket.on("chat message", (msg) => {
+        const item = document.createElement("li");
+        item.textContent = msg;
+        messages.appendChild(item);
+        window.scrollTo(0, document.body.scrollHeight);
+      });
 
-  disconnectBtn.addEventListener('click', () => {
-    socket.disconnect()
-  })
+      disconnectBtn.addEventListener("click", () => {
+        socket.disconnect();
+      });
 
-  socket.on('user disconnects', (msg) => {
-    alert(msg)
-  })
-</script>
+      socket.on("user disconnects", (msg) => {
+        alert(msg);
+      });
+    </script>
   </body>
 </html>
